opam-version: "2.0"
name: "sfml"
version: "0.08.2"
synopsis: "Bindings to the SFML multimedia library"
description: """
SFML provides a simple interface to the various components of your PC, to ease
the development of games and multimedia applications.
It is composed of five modules: system, window, graphics, audio and network.

SFML homepage: https://www.sfml-dev.org/

This version of the bindings is known to work with SFML 2.5.1"""
maintainer: "Florent Monnier <monnier.florent@gmail.com>"
authors: ["Florent Monnier" "Sylvain Boilard"]
license: "zlib/png"
tags: [
  "bindings" "graphics" "audio" "multimedia" "gamedev" "opengl" "network"
]
homepage: "https://github.com/fccm/ocaml-sfml"
doc: "http://www.linux-nantes.org/~fmonnier/ocaml/sfml/doc/"
bug-reports: "https://github.com/fccm/ocaml-sfml/issues"
depends: [
  "ocaml" {>= "4.08.1" & < "4.10"}
  "ocamlfind" {build}
  "conf-sfml2"
]
build: [make "-C" "src" "cxx_all"]
install: [make "-C" "src" "findinstall_cxx"]
dev-repo: "git+https://github.com/fccm/ocaml-sfml.git"
url {
  src: "https://github.com/fccm/ocaml-sfml/archive/v0.08.2.tar.gz"
  checksum: "md5=5bd9eead49e13c9b07821db80d5c0c95"
}
